compiler-core/src/docs/snapshots/gleam_core__docs__tests__internal_type_reexport_in_same_module.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- main.gleam

@internal
pub type Internal

pub type External =
  Internal


---- TYPES

--- External
<pre><code>pub type External =
  @internal Internal</code></pre>
