compiler-core/src/docs/snapshots/gleam_core__docs__tests__internal_type_reexport_in_same_module_as_parameter.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- main.gleam

@internal
pub type Internal

pub type External =
  List(Internal)


---- TYPES

--- External
<pre><code>pub type External =
  List(@internal Internal)</code></pre>
