compiler-core/src/docs/snapshots/gleam_core__docs__tests__internal_type_reexport_in_same_module_as_parameter_colours.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- main.gleam

@internal
pub type Internal

pub type External =
  List(Internal)


---- TYPES

--- External
<pre><code><span class="hljs-keyword">pub type </span><span class="hljs-title">External</span> =
  <span class="hljs-title">List</span>(<span class="hljs-comment">@internal </span><span class="hljs-title">Internal</span>)</code></pre>
