compiler-core/src/docs/snapshots/gleam_core__docs__tests__link_to_type_in_different_module_from_nested_module.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- gleam/dict.gleam
pub type Dict(a, b)

-- gleam/dynamic/decode.gleam

import gleam/dict

pub fn decode_dict() -> dict.Dict(a, b) { todo }


---- VALUES

--- decode_dict
<pre><code>pub fn decode_dict() -> <a href="../dict.html#Dict" title="gleam/dict.{type Dict}">dict.Dict</a>(a, b)</code></pre>
