compiler-core/src/docs/snapshots/gleam_core__docs__tests__link_to_type_in_same_module.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- TYPES

--- Dict
<pre><code><span class="hljs-keyword">pub </span><span class="hljs-keyword">type </span><span class="hljs-title">Dict</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">b</span>)</code></pre>

---- VALUES

--- new
<pre><code><span class="hljs-keyword">pub fn </span><span class="hljs-title">new</span>() -> <a href="#Dict"><span class="hljs-title">Dict</span></a>(<span class="hljs-variable">a</span>, <span class="hljs-variable">b</span>)</code></pre>
