compiler-core/src/docs/snapshots/gleam_core__docs__tests__long_function_with_no_arguments_parentheses_are_not_split.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- main.gleam

pub fn aaaaaaaaaaaaaaaaaaaaaaaaaaaa() -> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa {
  todo
}


---- VALUES

--- aaaaaaaaaaaaaaaaaaaaaaaaaaaa
<pre><code>pub fn aaaaaaaaaaaaaaaaaaaaaaaaaaaa() -> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</code></pre>
