compiler-core/src/docs/snapshots/gleam_core__docs__tests__markdown_code_from_function_comment_is_trimmed.snap
---
source: compiler-core/src/docs/tests.rs
expression: "html_page_to_string(compile(config, modules),\nvec![\".member:has(#indentation_test)\"])"
---
<!-- Page: app.html -->

<!-- Selector: .member:has(#indentation_test) -->
<div class="member">
    <div class="member-name">
      <h2 id="indentation_test">
        <a href="#indentation_test">
          indentation_test
        </a>
      </h2>
      
    </div>

    <pre><code class="hljs gleam">pub fn indentation_test() -&gt; a</code></pre>
    
    <div class="rendered-markdown"><p>Here’s an example code snippet:</p>
<pre><code>wibble
  |&gt; wobble
</code></pre>
</div>
  </div>
