compiler-core/src/docs/snapshots/gleam_core__docs__tests__markdown_code_from_module_comment_is_trimmed.snap
---
source: compiler-core/src/docs/tests.rs
expression: "html_page_to_string(compile(config, modules), vec![\".content\"])"
---
<!-- Page: app.html -->

<!-- Selector: .content -->
<main class="content">
        
<h1 class="module-name" id="module-name">
  <a href="#module-name">app</a>
  <svg class="icon icon-gleam-chasse"><use xlink:href="#icon-gleam-chasse"></use></svg>
</h1>
<p>Here’s an example code snippet:</p>
<pre><code>wibble
  |&gt; wobble
</code></pre>






      </main>
